--- a/PG3_2_1.vcxproj
+++ b/PG3_2_1.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Math.h" />
     <ClInclude Include="Phase.h" />
   </ItemGroup>
   <ItemGroup>
