--- a/PG3_2_1.vcxproj.filters
+++ b/PG3_2_1.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Phase.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Math.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Enemy.cpp">
